BPER/DEVF/force-app/main/default/objects/Wallet__c/Wallet__c.object-meta.xml
<CustomObject>
    <label>Portafoglio</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Wallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portafogli</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>