BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/Abilitazione_MMDS__c.field-meta.xml
<CustomField>
    <fullName>Abilitazione_MMDS__c</fullName>
    <formula>OR (
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Private&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Corporate&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Small Business&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Large Corporate&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Consulenti Finanziari&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Key Client Privati&apos;),
ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Enti E Tesorerie&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abilitazione MMDS</label>
    <type>Checkbox</type>
</CustomField>