BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/Codice_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>Codice_Portafoglio__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Codice Portafoglio</label>
    <type>AutoNumber</type>
</CustomField>