BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_MatricolaReferente__c.field-meta.xml
<CustomField>
    <fullName>CRM_MatricolaReferente__c</fullName>
    <formula>CRM_ReferentePortafoglio__r.PTF_User__r.PTF_RegistrationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricola referente</label>
    <type>Text</type>
</CustomField>