BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_Numero_NDG_attivi__c.field-meta.xml
<CustomField>
    <fullName>CRM_Numero_NDG_attivi__c</fullName>
    <description>Utilizzato ai fini reportistici EA e SF</description>
    <label>Numero NDG attivi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>