BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_numNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_numNDG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numero di NDG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>