BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_ReferenteFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferenteFormula__c</fullName>
    <formula>IF(
    PTF_Pool__c,
				&apos;Pool&apos;,
				IF(CRM_ReferentePortafoglio__c != null,
				CRM_ReferentePortafoglio__r.FirstName + &apos; &apos; + CRM_ReferentePortafoglio__r.LastName,
				&apos;Non assegnato&apos;)
)</formula>
    <label>Referente - PTF</label>
    <type>Text</type>
</CustomField>