BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_ReferentePortafoglio__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferentePortafoglio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portafogli</relationshipLabel>
    <relationshipName>Portafogli</relationshipName>
    <type>Lookup</type>
</CustomField>