BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/CRM_User_Referente__c.field-meta.xml
<CustomField>
    <fullName>CRM_User_Referente__c</fullName>
    <formula>$User.Id = CRM_ReferentePortafoglio__r.PTF_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User = Referente</label>
    <type>Checkbox</type>
</CustomField>