BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_CheckUffPrivate__c.field-meta.xml
<CustomField>
    <fullName>EA_CheckUffPrivate__c</fullName>
    <formula>IF(RIGHT(Name, 4) = &apos;0075&apos;, false,
AND(
 OR(
 AND(
       ISPICKVAL(PTF_ModelloDiServizio__c, &apos;Private&apos;),
      OR(PTF_UffPrivate__c=&apos;&apos;,PTF_UffPrivate__r.PTF_IdCED__c=&apos;&apos;)
     ), 
 NOT(CONTAINS(PTF_Filiale__r.PTF_IDCEDUffPrivate__c, PTF_UffPrivate__r.PTF_IdCED__c))
 ),
  ISNULL(PTF_DeletionDate__c)
)
)</formula>
    <label>EA_CheckUffPrivate</label>
    <type>Checkbox</type>
</CustomField>