BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Filiera_Risalite__c.field-meta.xml
<CustomField>
    <fullName>EA_Filiera_Risalite__c</fullName>
    <formula>IF( OR(ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Small Business&apos;),ISPICKVAL(PTF_ModelloDiServizio__c,&apos;POE&apos;),ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Controparti Istituzionali&apos;)), &apos;IR&apos;,
IF( OR(ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Family&apos;),ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Personal&apos;)), &apos;PV&apos;,
IF( OR(ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Private&apos;),ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Lower Private&apos;)), &apos;PR&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Cesare Ponti&apos;),&apos;CP&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Consulenti Finanziari&apos;), &apos;CF&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Key Client Privati&apos;), &apos;KP&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Corporate&apos;), &apos;IM&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Large Corporate&apos;), &apos;KI&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Enti e Tesorerie&apos;), &apos;ET&apos;,
IF( ISPICKVAL(PTF_ModelloDiServizio__c,&apos;Institutional Wealth&apos;), &apos;IW&apos;, &apos;Altro&apos;
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA_Filiera_Risalite</label>
    <type>Text</type>
</CustomField>