BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Nome_Area__c.field-meta.xml
<CustomField>
    <fullName>EA_Nome_Area__c</fullName>
    <formula>PTF_Area__r.Name</formula>
    <label>Nome Area</label>
    <type>Text</type>
</CustomField>