BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Nome_Banca__c.field-meta.xml
<CustomField>
    <fullName>EA_Nome_Banca__c</fullName>
    <formula>PTF_Banca__r.Name</formula>
    <label>Nome Banca</label>
    <type>Text</type>
</CustomField>