BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Nome_Capofila__c.field-meta.xml
<CustomField>
    <fullName>EA_Nome_Capofila__c</fullName>
    <formula>PTF_Capofila__r.Name</formula>
    <label>Nome Capofila</label>
    <type>Text</type>
</CustomField>