BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Nome_DirezioneRegionale__c.field-meta.xml
<CustomField>
    <fullName>EA_Nome_DirezioneRegionale__c</fullName>
    <formula>PTF_DirezioneRegionale__r.Name</formula>
    <label>Nome Direzione Regionale</label>
    <type>Text</type>
</CustomField>