BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/EA_Nome_Filiale__c.field-meta.xml
<CustomField>
    <fullName>EA_Nome_Filiale__c</fullName>
    <formula>PTF_Filiale__r.Name</formula>
    <label>Nome Filiale</label>
    <type>Text</type>
</CustomField>