BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/FilialeTEST__c.field-meta.xml
<CustomField>
    <fullName>FilialeTEST__c</fullName>
    <formula>VALUE(PTF_Filiale__r.PTF_IdCED__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FilialeTEST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>