BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/Gestore__c.field-meta.xml
<CustomField>
    <fullName>Gestore__c</fullName>
    <formula>IF( RecordType.Name == &apos;Micro-Portafoglio&apos;,Owner:User.FirstName + &apos; &apos; + Owner:User.LastName,&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referente</label>
    <type>Text</type>
</CustomField>