BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/IN_OUT_PTF_DATE__c.field-meta.xml
<CustomField>
    <fullName>IN_OUT_PTF_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IN OUT PTF DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>