BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_AMMINISTRAZIONI_PUBBLICHE__c.field-meta.xml
<CustomField>
    <fullName>MDS_AMMINISTRAZIONI_PUBBLICHE__c</fullName>
    <label>MDS AMMINISTRAZIONI PUBBLICHE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>