BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_BANCHE_E_SOCIETA_FINANZIARIE__c.field-meta.xml
<CustomField>
    <fullName>MDS_BANCHE_E_SOCIETA_FINANZIARIE__c</fullName>
    <label>MDS BANCHE, SOC. E FONDAZIONI BANCARIE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>