BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_CONDOMINI__c.field-meta.xml
<CustomField>
    <fullName>MDS_CONDOMINI__c</fullName>
    <label>MDS CONDOMINI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>