BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_CORPORATE__c.field-meta.xml
<CustomField>
    <fullName>MDS_CORPORATE__c</fullName>
    <label>MDS CORPORATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>