BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_FAMILY_A_VALORE_FOCUS_RACCOLTA__c.field-meta.xml
<CustomField>
    <fullName>MDS_FAMILY_A_VALORE_FOCUS_RACCOLTA__c</fullName>
    <label>MDS FAMILY A VALORE FOCUS RACCOLTA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>