BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_KEY_CLIENT_PRIVATI__c.field-meta.xml
<CustomField>
    <fullName>MDS_KEY_CLIENT_PRIVATI__c</fullName>
    <label>MDS KEY CLIENT PRIVATI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>