BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_LARGE_CORPORATE__c.field-meta.xml
<CustomField>
    <fullName>MDS_LARGE_CORPORATE__c</fullName>
    <label>MDS LARGE CORPORATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>