BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_POE_MARGINALI__c.field-meta.xml
<CustomField>
    <fullName>MDS_POE_MARGINALI__c</fullName>
    <label>MDS POE MARGINALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>