BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_PRIVATE_GOLD__c.field-meta.xml
<CustomField>
    <fullName>MDS_PRIVATE_GOLD__c</fullName>
    <label>MDS PRIVATE GOLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>