BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_PRIVATE_SILVER__c.field-meta.xml
<CustomField>
    <fullName>MDS_PRIVATE_SILVER__c</fullName>
    <label>MDS PRIVATE SILVER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>