BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_PROCEDURE_CONCORSUALI__c.field-meta.xml
<CustomField>
    <fullName>MDS_PROCEDURE_CONCORSUALI__c</fullName>
    <label>MDS PROCEDURE CONCORSUALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>