BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_SMALL_BUSINESS_A_VALORE__c.field-meta.xml
<CustomField>
    <fullName>MDS_SMALL_BUSINESS_A_VALORE__c</fullName>
    <label>MDS SMALL BUSINESS A VALORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>