BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_SMALL_BUSINESS_CORE__c.field-meta.xml
<CustomField>
    <fullName>MDS_SMALL_BUSINESS_CORE__c</fullName>
    <label>MDS SMALL BUSINESS CORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>