BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_SME__c.field-meta.xml
<CustomField>
    <fullName>MDS_SME__c</fullName>
    <label>MDS SME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>