BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_SOCIETA_DEL_GRUPPO_BPER__c.field-meta.xml
<CustomField>
    <fullName>MDS_SOCIETA_DEL_GRUPPO_BPER__c</fullName>
    <label>MDS SOCIETA DEL GRUPPO BPER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>