BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_TERZO_SETTORE__c.field-meta.xml
<CustomField>
    <fullName>MDS_TERZO_SETTORE__c</fullName>
    <label>MDS TERZO SETTORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>