BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/MDS_UPPER_POE__c.field-meta.xml
<CustomField>
    <fullName>MDS_UPPER_POE__c</fullName>
    <label>MDS UPPER POE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>