BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_AggMassivaEnable__c.field-meta.xml
<CustomField>
    <fullName>PTF_AggMassivaEnable__c</fullName>
    <formula>OR ( 
				$Profile.Name = &apos;NEC_D.3&apos;,
				$Profile.Name = &apos;NEC_F.1&apos;,
				$Profile.Name = &apos;NEC_F.9&apos;,
				$Profile.Name = &apos;NEC_F.10&apos;,
				$Profile.Name = &apos;NEC_D.7&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abilitazione aggiunta massiva</label>
    <type>Checkbox</type>
</CustomField>