BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Area__c.field-meta.xml
<CustomField>
    <fullName>PTF_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Area)</relationshipLabel>
    <relationshipName>Portafogli2</relationshipName>
    <type>Lookup</type>
</CustomField>