BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_AreaNoEncryption__c.field-meta.xml
<CustomField>
    <fullName>PTF_AreaNoEncryption__c</fullName>
    <formula>PTF_Area__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>