BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_AutoNumber__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>