BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Banca__c.field-meta.xml
<CustomField>
    <fullName>PTF_Banca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banca</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli</relationshipLabel>
    <relationshipName>Portafogli</relationshipName>
    <type>Lookup</type>
</CustomField>