BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_BancaNoEncryption__c.field-meta.xml
<CustomField>
    <fullName>PTF_BancaNoEncryption__c</fullName>
    <formula>PTF_Banca__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banca</label>
    <type>Text</type>
</CustomField>