BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_BranchTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>PTF_BranchTypeDesc__c</fullName>
    <formula>PTF_Filiale__r.PTF_BranchTypeDesc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulo</label>
    <type>Text</type>
</CustomField>