BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_BranchTypology__c.field-meta.xml
<CustomField>
    <fullName>PTF_BranchTypology__c</fullName>
    <formula>TEXT(PTF_Filiale__r.PTF_BranchTypology__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BranchTypology</label>
    <type>Text</type>
</CustomField>