BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Capofila__c.field-meta.xml
<CustomField>
    <fullName>PTF_Capofila__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capofila</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Capofila)</relationshipLabel>
    <relationshipName>Portafogli3</relationshipName>
    <type>Lookup</type>
</CustomField>