BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_CapofilaNoEncryption__c.field-meta.xml
<CustomField>
    <fullName>PTF_CapofilaNoEncryption__c</fullName>
    <formula>PTF_Capofila__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capofila</label>
    <type>Text</type>
</CustomField>