BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_CentrPrivate__c.field-meta.xml
<CustomField>
    <fullName>PTF_CentrPrivate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro Private Associato</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Centro Private Associato)</relationshipLabel>
    <relationshipName>Portafogli5</relationshipName>
    <type>Lookup</type>
</CustomField>