BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Code__c.field-meta.xml
<CustomField>
    <fullName>PTF_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CodID Portafoglio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>