BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Codice_Nativo__c.field-meta.xml
<CustomField>
    <fullName>PTF_Codice_Nativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Nativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>