BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Codice_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Codice_Portafoglio__c</fullName>
    <formula>IF( NOT( ISBLANK( PTF_Codice_Nativo__c ) ) , PTF_Codice_Nativo__c ,  PTF_Codice_SFDC__c )</formula>
    <label>Codice Portafoglio</label>
    <type>Text</type>
</CustomField>