BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Codice_SFDC__c.field-meta.xml
<CustomField>
    <fullName>PTF_Codice_SFDC__c</fullName>
    <label>Codice SFDC</label>
    <type>AutoNumber</type>
</CustomField>