BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Concordato__c.field-meta.xml
<CustomField>
    <fullName>PTF_Concordato__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Accordato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>