BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Deleted__c.field-meta.xml
<CustomField>
    <fullName>PTF_Deleted__c</fullName>
    <formula>NOT(ISBLANK(PTF_DeletionDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portafoglio eliminato</label>
    <type>Checkbox</type>
</CustomField>