BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_DeletionDate__c.field-meta.xml
<CustomField>
    <fullName>PTF_DeletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data cancellazione</label>
    <type>Date</type>
</CustomField>