BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_DirezioneRegionale__c.field-meta.xml
<CustomField>
    <fullName>PTF_DirezioneRegionale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direzione Regionale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Direzione Regionale)</relationshipLabel>
    <relationshipName>Portafogli1</relationshipName>
    <type>Lookup</type>
</CustomField>