BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_DirezioneRegionaleNoEncryption__c.field-meta.xml
<CustomField>
    <fullName>PTF_DirezioneRegionaleNoEncryption__c</fullName>
    <formula>PTF_DirezioneRegionale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direzione Regionale</label>
    <type>Text</type>
</CustomField>