BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_EliminazioneEnable__c.field-meta.xml
<CustomField>
    <fullName>PTF_EliminazioneEnable__c</fullName>
    <formula>OR (
$Profile.Name = &apos;NEC_D.0&apos;,
$Profile.Name = &apos;NEC_ADMIN&apos;,
$Profile.Name = &apos;NEC_SYSADMIN&apos;,
AND ($Profile.Name = &apos;NEC_D.2&apos;, $User.abi__c =&apos;01015&apos;, $User.idced__c =&apos;6929&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abilitazione eliminazione portafoglio</label>
    <type>Checkbox</type>
</CustomField>