BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filiale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portafogli (Filiale)</relationshipLabel>
    <relationshipName>Filiali</relationshipName>
    <type>Lookup</type>
</CustomField>