BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_FilialeNoEncryption__c.field-meta.xml
<CustomField>
    <fullName>PTF_FilialeNoEncryption__c</fullName>
    <formula>PTF_Filiale__r.CRM_Nome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>