BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_IndiceOrdinamento__c.field-meta.xml
<CustomField>
    <fullName>PTF_IndiceOrdinamento__c</fullName>
    <formula>IF (
TEXT(PTF_ModelloDiServizio__c) = &apos;Assente&apos;,15,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Residuale&apos;,16,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Family&apos;,3,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Personal&apos;,4,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Private&apos;,5,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Key Client Privati&apos;,6,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Consulenti Finanziari&apos;,7,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;POE&apos;,8,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Small Business&apos;,9,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Corporate&apos;,10,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Large Corporate&apos;,12,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Controparti Istituzionali&apos;,13,
IF (TEXT(PTF_ModelloDiServizio__c) = &apos;Enti e Tesorerie&apos;,14,0)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>