BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_isPTFTecnico__c.field-meta.xml
<CustomField>
    <fullName>PTF_isPTFTecnico__c</fullName>
    <formula>IF(
CONTAINS(
TRIM(RIGHT(Name, 7)), &apos;-000075&apos;
), TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portafoglio 75</label>
    <type>Checkbox</type>
</CustomField>