BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Matricola__c.field-meta.xml
<CustomField>
    <fullName>PTF_Matricola__c</fullName>
    <formula>IF(
PTF_Pool__c,
&apos;Pool&apos;,
IF(CRM_ReferentePortafoglio__c != null,
CRM_ReferentePortafoglio__r.PTF_RegistrationNumber__c,
&apos;Non assegnato&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTF_Matricola</label>
    <type>Text</type>
</CustomField>