BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>PTF_ModelloDiServizio__c</fullName>
    <label>Macro-modello di servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Modelli_di_Servizio</valueSetName>
    </valueSet>
</CustomField>