BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NDGPuri__c.field-meta.xml
<CustomField>
    <fullName>PTF_NDGPuri__c</fullName>
    <label>Numero NDG puri</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>