BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_NomiReferentiConcat__c.field-meta.xml
<CustomField>
    <fullName>PTF_NomiReferentiConcat__c</fullName>
    <defaultValue>&apos;Non assegnato&apos;</defaultValue>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Referenti</label>
    <type>TextArea</type>
</CustomField>