BPER/DEVF/force-app/main/default/objects/Wallet__c/fields/PTF_Numero_Capo_Nucleo__c.field-meta.xml
<CustomField>
    <fullName>PTF_Numero_Capo_Nucleo__c</fullName>
    <label>Totale Nuclei</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>